parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    MASMAS
    DOBLEPORCENTAJE
    COMILLAS
    ENTONCES
    PUNTO
    MOD
    DIFERENTE
    ANDBIT
    MENOSMENOS
    BOOL

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID PUNTOCOMA declara_variables declara_funciones metodo_principal
Rule 2     programa -> PROGRAMA ID PUNTOCOMA declara_variables metodo_principal
Rule 3     programa -> PROGRAMA ID PUNTOCOMA declara_funciones metodo_principal
Rule 4     programa -> PROGRAMA ID PUNTOCOMA metodo_principal
Rule 5     declara_variables -> declara_variables1
Rule 6     declara_variables -> declara_variables1 declara_variables
Rule 7     declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA
Rule 8     declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA declara_variables1
Rule 9     tipo -> ENTERO
Rule 10    tipo -> REAL
Rule 11    tipo -> CHAR
Rule 12    lista_ids -> variable
Rule 13    lista_ids -> variable COMA lista_ids
Rule 14    variable -> ID
Rule 15    variable -> ID indice_matriz
Rule 16    variable -> ID indice_matriz indice_matriz
Rule 17    indice_matriz -> CORIZQ ENTERO CORDER
Rule 18    declara_funciones -> declara_funciones1 declara_funciones
Rule 19    declara_funciones -> declara_funciones1
Rule 20    declara_funciones1 -> MODULO tipo_retorno ID PARIZQ lista_parametros PARDER bloque
Rule 21    declara_funciones1 -> MODULO tipo_retorno ID PARIZQ PARDER bloque
Rule 22    declara_funciones1 -> MODULO tipo_retorno ID PARIZQ lista_parametros PARDER bloque declara_funciones1
Rule 23    declara_funciones1 -> MODULO tipo_retorno ID PARIZQ PARDER bloque declara_funciones1
Rule 24    tipo_retorno -> tipo
Rule 25    tipo_retorno -> VOID
Rule 26    lista_parametros -> lista_parametros1 lista_parametros
Rule 27    lista_parametros -> lista_parametros1
Rule 28    lista_parametros1 -> tipo DOSPUNTOS lista_idparam PUNTOCOMA
Rule 29    lista_parametros1 -> tipo DOSPUNTOS lista_idparam PUNTOCOMA lista_parametros1
Rule 30    lista_idparam -> variable
Rule 31    lista_idparam -> variable COMA lista_idparam
Rule 32    bloque -> LLAVEIZQ declara_variables estatutos_control REGRESA PARIZQ expresion PARDER LLAVEDER
Rule 33    bloque -> LLAVEIZQ estatutos_control REGRESA PARIZQ expresion PARDER LLAVEDER
Rule 34    bloque -> LLAVEIZQ declara_variables REGRESA PARIZQ expresion PARDER LLAVEDER
Rule 35    bloque -> LLAVEIZQ REGRESA PARIZQ expresion PARDER LLAVEDER
Rule 36    bloque -> LLAVEIZQ declara_variables estatutos_control REGRESA PARIZQ PARDER LLAVEDER
Rule 37    bloque -> LLAVEIZQ estatutos_control REGRESA PARIZQ PARDER LLAVEDER
Rule 38    bloque -> LLAVEIZQ declara_variables REGRESA PARIZQ PARDER LLAVEDER
Rule 39    bloque -> LLAVEIZQ REGRESA PARIZQ PARDER LLAVEDER
Rule 40    metodo_principal -> PRINCIPAL PARIZQ PARDER LLAVEIZQ declara_variables estatutos_control LLAVEDER
Rule 41    metodo_principal -> PRINCIPAL PARIZQ PARDER LLAVEIZQ estatutos_control LLAVEDER
Rule 42    metodo_principal -> PRINCIPAL PARIZQ PARDER LLAVEIZQ declara_variables LLAVEDER
Rule 43    metodo_principal -> PRINCIPAL PARIZQ PARDER LLAVEIZQ LLAVEDER
Rule 44    estatutos_control -> estatutos_control1 estatutos_control
Rule 45    estatutos_control -> estatutos_control1
Rule 46    estatutos_control1 -> estatuto_control PUNTOCOMA
Rule 47    estatutos_control1 -> estatuto_control PUNTOCOMA estatutos_control1
Rule 48    estatuto -> asignacion
Rule 49    estatuto -> llamada
Rule 50    estatuto -> lectura
Rule 51    estatuto -> escritura
Rule 52    estatuto_control -> decision
Rule 53    estatuto_control -> repeticion
Rule 54    estatuto_control -> estatuto
Rule 55    asignacion -> variable IGUAL estatuto
Rule 56    asignacion -> variable IGUAL expresion
Rule 57    llamada -> ID PARIZQ PARDER
Rule 58    llamada -> ID PARIZQ lista_valores PARDER
Rule 59    llamada -> ID PARIZQ lista_valores PARDER expresion
Rule 60    llamada -> ID PARIZQ PARDER expresion
Rule 61    lectura -> LEER PARIZQ lista_valores PARDER
Rule 62    escritura -> ESCRIBIR PARIZQ lista_valores PARDER
Rule 63    decision -> SI PARIZQ expresion PARDER hacer
Rule 64    decision -> SI PARIZQ expresion PARDER hacer SINO hacer
Rule 65    hacer -> LLAVEIZQ LLAVEDER
Rule 66    hacer -> LLAVEIZQ estatutos_control LLAVEDER
Rule 67    repeticion -> mientras
Rule 68    repeticion -> repite
Rule 69    mientras -> MIENTRAS PARIZQ expresion PARDER HAZ hacer
Rule 70    repite -> REPITE hacer HASTA PARIZQ expresion PARDER
Rule 71    lista_valores -> expresion
Rule 72    lista_valores -> expresion COMA lista_valores
Rule 73    expresion -> expresion AND exp
Rule 74    expresion -> expresion OR exp
Rule 75    expresion -> expresion NOT exp
Rule 76    expresion -> expresion MENORQUE exp
Rule 77    expresion -> expresion MAYORQUE exp
Rule 78    expresion -> expresion IGUALIGUAL exp
Rule 79    expresion -> expresion MENORIGUAL exp
Rule 80    expresion -> expresion MAYORIGUAL exp
Rule 81    expresion -> determinante
Rule 82    expresion -> inversa
Rule 83    expresion -> exp
Rule 84    exp -> exp MAS term
Rule 85    exp -> exp MENOS term
Rule 86    exp -> term
Rule 87    term -> term MULTI fact
Rule 88    term -> term DIV fact
Rule 89    term -> fact
Rule 90    fact -> varcte
Rule 91    varcte -> ENTERO
Rule 92    varcte -> REAL
Rule 93    varcte -> CHAR
Rule 94    varcte -> ID
Rule 95    fact -> PARIZQ expresion PARDER
Rule 96    determinante -> estatuto PESOS
Rule 97    inversa -> estatuto INTERROGACION

Terminals, with rules where they appear

AND                  : 73
ANDBIT               : 
BOOL                 : 
CHAR                 : 11 93
COMA                 : 13 31 72
COMILLAS             : 
CORDER               : 17
CORIZQ               : 17
DIFERENTE            : 
DIV                  : 88
DOBLEPORCENTAJE      : 
DOSPUNTOS            : 7 8 28 29
ENTERO               : 9 17 91
ENTONCES             : 
ESCRIBIR             : 62
HASTA                : 70
HAZ                  : 69
ID                   : 1 2 3 4 14 15 16 20 21 22 23 57 58 59 60 94
IGUAL                : 55 56
IGUALIGUAL           : 78
INTERROGACION        : 97
LEER                 : 61
LLAVEDER             : 32 33 34 35 36 37 38 39 40 41 42 43 65 66
LLAVEIZQ             : 32 33 34 35 36 37 38 39 40 41 42 43 65 66
MAS                  : 84
MASMAS               : 
MAYORIGUAL           : 80
MAYORQUE             : 77
MENORIGUAL           : 79
MENORQUE             : 76
MENOS                : 85
MENOSMENOS           : 
MIENTRAS             : 69
MOD                  : 
MODULO               : 20 21 22 23
MULTI                : 87
NOT                  : 75
OR                   : 74
PARDER               : 20 21 22 23 32 33 34 35 36 37 38 39 40 41 42 43 57 58 59 60 61 62 63 64 69 70 95
PARIZQ               : 20 21 22 23 32 33 34 35 36 37 38 39 40 41 42 43 57 58 59 60 61 62 63 64 69 70 95
PESOS                : 96
PRINCIPAL            : 40 41 42 43
PROGRAMA             : 1 2 3 4
PUNTO                : 
PUNTOCOMA            : 1 2 3 4 7 8 28 29 46 47
REAL                 : 10 92
REGRESA              : 32 33 34 35 36 37 38 39
REPITE               : 70
SI                   : 63 64
SINO                 : 64
VOID                 : 25
error                : 

Nonterminals, with rules where they appear

asignacion           : 48
bloque               : 20 21 22 23
decision             : 52
declara_funciones    : 1 3 18
declara_funciones1   : 18 19 22 23
declara_variables    : 1 2 6 32 34 36 38 40 42
declara_variables1   : 5 6 8
determinante         : 81
escritura            : 51
estatuto             : 54 55 96 97
estatuto_control     : 46 47
estatutos_control    : 32 33 36 37 40 41 44 66
estatutos_control1   : 44 45 47
exp                  : 73 74 75 76 77 78 79 80 83 84 85
expresion            : 32 33 34 35 56 59 60 63 64 69 70 71 72 73 74 75 76 77 78 79 80 95
fact                 : 87 88 89
hacer                : 63 64 64 69 70
indice_matriz        : 15 16 16
inversa              : 82
lectura              : 50
lista_idparam        : 28 29 31
lista_ids            : 7 8 13
lista_parametros     : 20 22 26
lista_parametros1    : 26 27 29
lista_valores        : 58 59 61 62 72
llamada              : 49
metodo_principal     : 1 2 3 4
mientras             : 67
programa             : 0
repeticion           : 53
repite               : 68
term                 : 84 85 86 87 88
tipo                 : 7 8 24 28 29
tipo_retorno         : 20 21 22 23
varcte               : 90
variable             : 12 13 30 31 55 56

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID PUNTOCOMA declara_variables declara_funciones metodo_principal
    (2) programa -> . PROGRAMA ID PUNTOCOMA declara_variables metodo_principal
    (3) programa -> . PROGRAMA ID PUNTOCOMA declara_funciones metodo_principal
    (4) programa -> . PROGRAMA ID PUNTOCOMA metodo_principal

    PROGRAMA        shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAMA . ID PUNTOCOMA declara_variables declara_funciones metodo_principal
    (2) programa -> PROGRAMA . ID PUNTOCOMA declara_variables metodo_principal
    (3) programa -> PROGRAMA . ID PUNTOCOMA declara_funciones metodo_principal
    (4) programa -> PROGRAMA . ID PUNTOCOMA metodo_principal

    ID              shift and go to state 3


state 2

    (0) S' -> programa .



state 3

    (1) programa -> PROGRAMA ID . PUNTOCOMA declara_variables declara_funciones metodo_principal
    (2) programa -> PROGRAMA ID . PUNTOCOMA declara_variables metodo_principal
    (3) programa -> PROGRAMA ID . PUNTOCOMA declara_funciones metodo_principal
    (4) programa -> PROGRAMA ID . PUNTOCOMA metodo_principal

    PUNTOCOMA       shift and go to state 4


state 4

    (1) programa -> PROGRAMA ID PUNTOCOMA . declara_variables declara_funciones metodo_principal
    (2) programa -> PROGRAMA ID PUNTOCOMA . declara_variables metodo_principal
    (3) programa -> PROGRAMA ID PUNTOCOMA . declara_funciones metodo_principal
    (4) programa -> PROGRAMA ID PUNTOCOMA . metodo_principal
    (5) declara_variables -> . declara_variables1
    (6) declara_variables -> . declara_variables1 declara_variables
    (18) declara_funciones -> . declara_funciones1 declara_funciones
    (19) declara_funciones -> . declara_funciones1
    (40) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ declara_variables estatutos_control LLAVEDER
    (41) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ estatutos_control LLAVEDER
    (42) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ declara_variables LLAVEDER
    (43) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ LLAVEDER
    (7) declara_variables1 -> . tipo DOSPUNTOS lista_ids PUNTOCOMA
    (8) declara_variables1 -> . tipo DOSPUNTOS lista_ids PUNTOCOMA declara_variables1
    (20) declara_funciones1 -> . MODULO tipo_retorno ID PARIZQ lista_parametros PARDER bloque
    (21) declara_funciones1 -> . MODULO tipo_retorno ID PARIZQ PARDER bloque
    (22) declara_funciones1 -> . MODULO tipo_retorno ID PARIZQ lista_parametros PARDER bloque declara_funciones1
    (23) declara_funciones1 -> . MODULO tipo_retorno ID PARIZQ PARDER bloque declara_funciones1
    (9) tipo -> . ENTERO
    (10) tipo -> . REAL
    (11) tipo -> . CHAR

    PRINCIPAL       shift and go to state 10
    MODULO          shift and go to state 14
    ENTERO          shift and go to state 9
    REAL            shift and go to state 11
    CHAR            shift and go to state 8

    declara_variables1             shift and go to state 12
    declara_funciones1             shift and go to state 13
    tipo                           shift and go to state 5
    metodo_principal               shift and go to state 7
    declara_variables              shift and go to state 6
    declara_funciones              shift and go to state 15

state 5

    (7) declara_variables1 -> tipo . DOSPUNTOS lista_ids PUNTOCOMA
    (8) declara_variables1 -> tipo . DOSPUNTOS lista_ids PUNTOCOMA declara_variables1

    DOSPUNTOS       shift and go to state 16


state 6

    (1) programa -> PROGRAMA ID PUNTOCOMA declara_variables . declara_funciones metodo_principal
    (2) programa -> PROGRAMA ID PUNTOCOMA declara_variables . metodo_principal
    (18) declara_funciones -> . declara_funciones1 declara_funciones
    (19) declara_funciones -> . declara_funciones1
    (40) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ declara_variables estatutos_control LLAVEDER
    (41) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ estatutos_control LLAVEDER
    (42) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ declara_variables LLAVEDER
    (43) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ LLAVEDER
    (20) declara_funciones1 -> . MODULO tipo_retorno ID PARIZQ lista_parametros PARDER bloque
    (21) declara_funciones1 -> . MODULO tipo_retorno ID PARIZQ PARDER bloque
    (22) declara_funciones1 -> . MODULO tipo_retorno ID PARIZQ lista_parametros PARDER bloque declara_funciones1
    (23) declara_funciones1 -> . MODULO tipo_retorno ID PARIZQ PARDER bloque declara_funciones1

    PRINCIPAL       shift and go to state 10
    MODULO          shift and go to state 14

    declara_funciones1             shift and go to state 13
    metodo_principal               shift and go to state 17
    declara_funciones              shift and go to state 18

state 7

    (4) programa -> PROGRAMA ID PUNTOCOMA metodo_principal .

    $end            reduce using rule 4 (programa -> PROGRAMA ID PUNTOCOMA metodo_principal .)


state 8

    (11) tipo -> CHAR .

    DOSPUNTOS       reduce using rule 11 (tipo -> CHAR .)
    ID              reduce using rule 11 (tipo -> CHAR .)


state 9

    (9) tipo -> ENTERO .

    DOSPUNTOS       reduce using rule 9 (tipo -> ENTERO .)
    ID              reduce using rule 9 (tipo -> ENTERO .)


state 10

    (40) metodo_principal -> PRINCIPAL . PARIZQ PARDER LLAVEIZQ declara_variables estatutos_control LLAVEDER
    (41) metodo_principal -> PRINCIPAL . PARIZQ PARDER LLAVEIZQ estatutos_control LLAVEDER
    (42) metodo_principal -> PRINCIPAL . PARIZQ PARDER LLAVEIZQ declara_variables LLAVEDER
    (43) metodo_principal -> PRINCIPAL . PARIZQ PARDER LLAVEIZQ LLAVEDER

    PARIZQ          shift and go to state 19


state 11

    (10) tipo -> REAL .

    DOSPUNTOS       reduce using rule 10 (tipo -> REAL .)
    ID              reduce using rule 10 (tipo -> REAL .)


state 12

    (5) declara_variables -> declara_variables1 .
    (6) declara_variables -> declara_variables1 . declara_variables
    (5) declara_variables -> . declara_variables1
    (6) declara_variables -> . declara_variables1 declara_variables
    (7) declara_variables1 -> . tipo DOSPUNTOS lista_ids PUNTOCOMA
    (8) declara_variables1 -> . tipo DOSPUNTOS lista_ids PUNTOCOMA declara_variables1
    (9) tipo -> . ENTERO
    (10) tipo -> . REAL
    (11) tipo -> . CHAR

    REGRESA         reduce using rule 5 (declara_variables -> declara_variables1 .)
    SI              reduce using rule 5 (declara_variables -> declara_variables1 .)
    MIENTRAS        reduce using rule 5 (declara_variables -> declara_variables1 .)
    REPITE          reduce using rule 5 (declara_variables -> declara_variables1 .)
    ID              reduce using rule 5 (declara_variables -> declara_variables1 .)
    LEER            reduce using rule 5 (declara_variables -> declara_variables1 .)
    ESCRIBIR        reduce using rule 5 (declara_variables -> declara_variables1 .)
    PRINCIPAL       reduce using rule 5 (declara_variables -> declara_variables1 .)
    MODULO          reduce using rule 5 (declara_variables -> declara_variables1 .)
    LLAVEDER        reduce using rule 5 (declara_variables -> declara_variables1 .)
    ENTERO          shift and go to state 9
    REAL            shift and go to state 11
    CHAR            shift and go to state 8

    tipo                           shift and go to state 5
    declara_variables1             shift and go to state 12
    declara_variables              shift and go to state 20

state 13

    (18) declara_funciones -> declara_funciones1 . declara_funciones
    (19) declara_funciones -> declara_funciones1 .
    (18) declara_funciones -> . declara_funciones1 declara_funciones
    (19) declara_funciones -> . declara_funciones1
    (20) declara_funciones1 -> . MODULO tipo_retorno ID PARIZQ lista_parametros PARDER bloque
    (21) declara_funciones1 -> . MODULO tipo_retorno ID PARIZQ PARDER bloque
    (22) declara_funciones1 -> . MODULO tipo_retorno ID PARIZQ lista_parametros PARDER bloque declara_funciones1
    (23) declara_funciones1 -> . MODULO tipo_retorno ID PARIZQ PARDER bloque declara_funciones1

    PRINCIPAL       reduce using rule 19 (declara_funciones -> declara_funciones1 .)
    MODULO          shift and go to state 14

    declara_funciones              shift and go to state 21
    declara_funciones1             shift and go to state 13

state 14

    (20) declara_funciones1 -> MODULO . tipo_retorno ID PARIZQ lista_parametros PARDER bloque
    (21) declara_funciones1 -> MODULO . tipo_retorno ID PARIZQ PARDER bloque
    (22) declara_funciones1 -> MODULO . tipo_retorno ID PARIZQ lista_parametros PARDER bloque declara_funciones1
    (23) declara_funciones1 -> MODULO . tipo_retorno ID PARIZQ PARDER bloque declara_funciones1
    (24) tipo_retorno -> . tipo
    (25) tipo_retorno -> . VOID
    (9) tipo -> . ENTERO
    (10) tipo -> . REAL
    (11) tipo -> . CHAR

    VOID            shift and go to state 23
    ENTERO          shift and go to state 9
    REAL            shift and go to state 11
    CHAR            shift and go to state 8

    tipo                           shift and go to state 22
    tipo_retorno                   shift and go to state 24

state 15

    (3) programa -> PROGRAMA ID PUNTOCOMA declara_funciones . metodo_principal
    (40) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ declara_variables estatutos_control LLAVEDER
    (41) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ estatutos_control LLAVEDER
    (42) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ declara_variables LLAVEDER
    (43) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ LLAVEDER

    PRINCIPAL       shift and go to state 10

    metodo_principal               shift and go to state 25

state 16

    (7) declara_variables1 -> tipo DOSPUNTOS . lista_ids PUNTOCOMA
    (8) declara_variables1 -> tipo DOSPUNTOS . lista_ids PUNTOCOMA declara_variables1
    (12) lista_ids -> . variable
    (13) lista_ids -> . variable COMA lista_ids
    (14) variable -> . ID
    (15) variable -> . ID indice_matriz
    (16) variable -> . ID indice_matriz indice_matriz

    ID              shift and go to state 28

    variable                       shift and go to state 27
    lista_ids                      shift and go to state 26

state 17

    (2) programa -> PROGRAMA ID PUNTOCOMA declara_variables metodo_principal .

    $end            reduce using rule 2 (programa -> PROGRAMA ID PUNTOCOMA declara_variables metodo_principal .)


state 18

    (1) programa -> PROGRAMA ID PUNTOCOMA declara_variables declara_funciones . metodo_principal
    (40) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ declara_variables estatutos_control LLAVEDER
    (41) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ estatutos_control LLAVEDER
    (42) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ declara_variables LLAVEDER
    (43) metodo_principal -> . PRINCIPAL PARIZQ PARDER LLAVEIZQ LLAVEDER

    PRINCIPAL       shift and go to state 10

    metodo_principal               shift and go to state 29

state 19

    (40) metodo_principal -> PRINCIPAL PARIZQ . PARDER LLAVEIZQ declara_variables estatutos_control LLAVEDER
    (41) metodo_principal -> PRINCIPAL PARIZQ . PARDER LLAVEIZQ estatutos_control LLAVEDER
    (42) metodo_principal -> PRINCIPAL PARIZQ . PARDER LLAVEIZQ declara_variables LLAVEDER
    (43) metodo_principal -> PRINCIPAL PARIZQ . PARDER LLAVEIZQ LLAVEDER

    PARDER          shift and go to state 30


state 20

    (6) declara_variables -> declara_variables1 declara_variables .

    REGRESA         reduce using rule 6 (declara_variables -> declara_variables1 declara_variables .)
    SI              reduce using rule 6 (declara_variables -> declara_variables1 declara_variables .)
    MIENTRAS        reduce using rule 6 (declara_variables -> declara_variables1 declara_variables .)
    REPITE          reduce using rule 6 (declara_variables -> declara_variables1 declara_variables .)
    ID              reduce using rule 6 (declara_variables -> declara_variables1 declara_variables .)
    LEER            reduce using rule 6 (declara_variables -> declara_variables1 declara_variables .)
    ESCRIBIR        reduce using rule 6 (declara_variables -> declara_variables1 declara_variables .)
    PRINCIPAL       reduce using rule 6 (declara_variables -> declara_variables1 declara_variables .)
    MODULO          reduce using rule 6 (declara_variables -> declara_variables1 declara_variables .)
    LLAVEDER        reduce using rule 6 (declara_variables -> declara_variables1 declara_variables .)


state 21

    (18) declara_funciones -> declara_funciones1 declara_funciones .

    PRINCIPAL       reduce using rule 18 (declara_funciones -> declara_funciones1 declara_funciones .)


state 22

    (24) tipo_retorno -> tipo .

    ID              reduce using rule 24 (tipo_retorno -> tipo .)


state 23

    (25) tipo_retorno -> VOID .

    ID              reduce using rule 25 (tipo_retorno -> VOID .)


state 24

    (20) declara_funciones1 -> MODULO tipo_retorno . ID PARIZQ lista_parametros PARDER bloque
    (21) declara_funciones1 -> MODULO tipo_retorno . ID PARIZQ PARDER bloque
    (22) declara_funciones1 -> MODULO tipo_retorno . ID PARIZQ lista_parametros PARDER bloque declara_funciones1
    (23) declara_funciones1 -> MODULO tipo_retorno . ID PARIZQ PARDER bloque declara_funciones1

    ID              shift and go to state 31


state 25

    (3) programa -> PROGRAMA ID PUNTOCOMA declara_funciones metodo_principal .

    $end            reduce using rule 3 (programa -> PROGRAMA ID PUNTOCOMA declara_funciones metodo_principal .)


state 26

    (7) declara_variables1 -> tipo DOSPUNTOS lista_ids . PUNTOCOMA
    (8) declara_variables1 -> tipo DOSPUNTOS lista_ids . PUNTOCOMA declara_variables1

    PUNTOCOMA       shift and go to state 32


state 27

    (12) lista_ids -> variable .
    (13) lista_ids -> variable . COMA lista_ids

    PUNTOCOMA       reduce using rule 12 (lista_ids -> variable .)
    COMA            shift and go to state 33


state 28

    (14) variable -> ID .
    (15) variable -> ID . indice_matriz
    (16) variable -> ID . indice_matriz indice_matriz
    (17) indice_matriz -> . CORIZQ ENTERO CORDER

    COMA            reduce using rule 14 (variable -> ID .)
    PUNTOCOMA       reduce using rule 14 (variable -> ID .)
    CORIZQ          shift and go to state 35

    indice_matriz                  shift and go to state 34

state 29

    (1) programa -> PROGRAMA ID PUNTOCOMA declara_variables declara_funciones metodo_principal .

    $end            reduce using rule 1 (programa -> PROGRAMA ID PUNTOCOMA declara_variables declara_funciones metodo_principal .)


state 30

    (40) metodo_principal -> PRINCIPAL PARIZQ PARDER . LLAVEIZQ declara_variables estatutos_control LLAVEDER
    (41) metodo_principal -> PRINCIPAL PARIZQ PARDER . LLAVEIZQ estatutos_control LLAVEDER
    (42) metodo_principal -> PRINCIPAL PARIZQ PARDER . LLAVEIZQ declara_variables LLAVEDER
    (43) metodo_principal -> PRINCIPAL PARIZQ PARDER . LLAVEIZQ LLAVEDER

    LLAVEIZQ        shift and go to state 36


state 31

    (20) declara_funciones1 -> MODULO tipo_retorno ID . PARIZQ lista_parametros PARDER bloque
    (21) declara_funciones1 -> MODULO tipo_retorno ID . PARIZQ PARDER bloque
    (22) declara_funciones1 -> MODULO tipo_retorno ID . PARIZQ lista_parametros PARDER bloque declara_funciones1
    (23) declara_funciones1 -> MODULO tipo_retorno ID . PARIZQ PARDER bloque declara_funciones1

    PARIZQ          shift and go to state 37


state 32

    (7) declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA .
    (8) declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA . declara_variables1
    (7) declara_variables1 -> . tipo DOSPUNTOS lista_ids PUNTOCOMA
    (8) declara_variables1 -> . tipo DOSPUNTOS lista_ids PUNTOCOMA declara_variables1
    (9) tipo -> . ENTERO
    (10) tipo -> . REAL
    (11) tipo -> . CHAR

  ! shift/reduce conflict for ENTERO resolved as shift
  ! shift/reduce conflict for REAL resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    PRINCIPAL       reduce using rule 7 (declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA .)
    MODULO          reduce using rule 7 (declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA .)
    REGRESA         reduce using rule 7 (declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA .)
    SI              reduce using rule 7 (declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA .)
    MIENTRAS        reduce using rule 7 (declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA .)
    REPITE          reduce using rule 7 (declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA .)
    ID              reduce using rule 7 (declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA .)
    LEER            reduce using rule 7 (declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA .)
    ESCRIBIR        reduce using rule 7 (declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA .)
    LLAVEDER        reduce using rule 7 (declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA .)
    ENTERO          shift and go to state 9
    REAL            shift and go to state 11
    CHAR            shift and go to state 8

  ! ENTERO          [ reduce using rule 7 (declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA .) ]
  ! REAL            [ reduce using rule 7 (declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA .) ]
  ! CHAR            [ reduce using rule 7 (declara_variables1 -> tipo DOSPUNTOS lista_ids PUNTOCOMA .) ]

    declara_variables1             shift and go to state 38
    tipo                           shift and go to state 5

state 33

    (13) lista_ids -> variable COMA . lista_ids
    (12) lista_ids -> . variable
    (13) lista_ids -> . variable COMA lista_ids
    (14) variable -> . ID
    (15) variable -> . ID indice_matriz
    (16) variable -> . ID indice_matriz indice_matriz

    ID              shift and go to state 28

    variable                       shift and go to state 27
    lista_ids                      shift and go to state 39

state 34

    (15) variable -> ID indice_matriz .
    (16) variable -> ID indice_matriz . indice_matriz
    (17) indice_matriz -> . CORIZQ ENTERO CORDER

    IGUAL           reduce using rule 15 (variable -> ID indice_matriz .)
    COMA            reduce using rule 15 (variable -> ID indice_matriz .)
    PUNTOCOMA       reduce using rule 15 (variable -> ID indice_matriz .)
    CORIZQ          shift and go to state 35

    indice_matriz                  shift and go to state 40

state 35

    (17) indice_matriz -> CORIZQ . ENTERO CORDER

    ENTERO          shift and go to state 41


state 36

    (40) metodo_principal -> PRINCIPAL PARIZQ PARDER LLAVEIZQ . declara_variables estatutos_control LLAVEDER
    (41) metodo_principal -> PRINCIPAL PARIZQ PARDER LLAVEIZQ . estatutos_control LLAVEDER
    (42) metodo_principal -> PRINCIPAL PARIZQ PARDER LLAVEIZQ . declara_variables LLAVEDER
    (43) metodo_principal -> PRINCIPAL PARIZQ PARDER LLAVEIZQ . LLAVEDER
    (5) declara_variables -> . declara_variables1
    (6) declara_variables -> . declara_variables1 declara_variables
    (44) estatutos_control -> . estatutos_control1 estatutos_control
    (45) estatutos_control -> . estatutos_control1
    (7) declara_variables1 -> . tipo DOSPUNTOS lista_ids PUNTOCOMA
    (8) declara_variables1 -> . tipo DOSPUNTOS lista_ids PUNTOCOMA declara_variables1
    (46) estatutos_control1 -> . estatuto_control PUNTOCOMA
    (47) estatutos_control1 -> . estatuto_control PUNTOCOMA estatutos_control1
    (9) tipo -> . ENTERO
    (10) tipo -> . REAL
    (11) tipo -> . CHAR
    (52) estatuto_control -> . decision
    (53) estatuto_control -> . repeticion
    (54) estatuto_control -> . estatuto
    (63) decision -> . SI PARIZQ expresion PARDER hacer
    (64) decision -> . SI PARIZQ expresion PARDER hacer SINO hacer
    (67) repeticion -> . mientras
    (68) repeticion -> . repite
    (48) estatuto -> . asignacion
    (49) estatuto -> . llamada
    (50) estatuto -> . lectura
    (51) estatuto -> . escritura
    (69) mientras -> . MIENTRAS PARIZQ expresion PARDER HAZ hacer
    (70) repite -> . REPITE hacer HASTA PARIZQ expresion PARDER
    (55) asignacion -> . variable IGUAL estatuto
    (56) asignacion -> . variable IGUAL expresion
    (57) llamada -> . ID PARIZQ PARDER
    (58) llamada -> . ID PARIZQ lista_valores PARDER
    (59) llamada -> . ID PARIZQ lista_valores PARDER expresion
    (60) llamada -> . ID PARIZQ PARDER expresion
    (61) lectura -> . LEER PARIZQ lista_valores PARDER
    (62) escritura -> . ESCRIBIR PARIZQ lista_valores PARDER
    (14) variable -> . ID
    (15) variable -> . ID indice_matriz
    (16) variable -> . ID indice_matriz indice_matriz

    LLAVEDER        shift and go to state 48
    ENTERO          shift and go to state 9
    REAL            shift and go to state 11
    CHAR            shift and go to state 8
    SI              shift and go to state 50
    MIENTRAS        shift and go to state 42
    REPITE          shift and go to state 44
    ID              shift and go to state 47
    LEER            shift and go to state 43
    ESCRIBIR        shift and go to state 49

    tipo                           shift and go to state 5
    mientras                       shift and go to state 55
    declara_variables              shift and go to state 45
    variable                       shift and go to state 46
    llamada                        shift and go to state 57
    repeticion                     shift and go to state 56
    lectura                        shift and go to state 59
    estatutos_control              shift and go to state 58
    declara_variables1             shift and go to state 12
    repite                         shift and go to state 51
    estatuto_control               shift and go to state 60
    decision                       shift and go to state 52
    asignacion                     shift and go to state 62
    estatuto                       shift and go to state 61
    escritura                      shift and go to state 54
    estatutos_control1             shift and go to state 53

state 37

    (20) declara_funciones1 -> MODULO tipo_retorno ID PARIZQ . lista_parametros PARDER bloque
    (21) declara_funciones1 -> MODULO tipo_retorno ID PARIZQ . PARDER bloque
    (22) declara_funciones1 -> MODULO tipo_retorno ID PARIZQ . lista_parametros PARDER bloque declara_funciones1
    (23) declara_funciones1 -> MODULO tipo_retorno ID PARIZQ . PARDER bloque declara_funciones1
    (26) lista_parametros -> . lista_parametros1 lista_parametros
    (27) lista_parametros -> . lista_parametros1
    (28) lista_parametros1 -> . tipo DOSPUNTOS lista_idparam PUNTOCOMA
    (29) lista_parametros1 -> . tipo DOSPUNTOS lista_idparam PUNTOCOMA lista_parametros1
    (9) tipo -> . ENTERO
    (10) tipo -> . REAL
    (11) tipo -> . CHAR
